# echo-absa-gdm

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_dp.sh  run_gemini.sh  run_gpt.sh  run_metric_dp.sh  run_metric_gemini.sh  y.py  z.py
absa/metrics/: metric_calc.py
absa/models/: dp.py  gemini.py  gpt.py  mistral.py  mt5.py  pyabsa.py  true_dp.py
data/corpus_final/: biodiversity_labeled_108t.csv  biodiversity_labeled_108t_slangid_txtdict_hf_stopwords.csv  indo_vaccination_labeled_175t.csv  indo_vaccination_labeled_175t_slangid_txtdict_hf_stopwords.csv  kampus_merdeka_labeled_150t.csv  kampus_merdeka_labeled_150t_slangid_txtdict_hf_stopwords.csv  kampus_merdeka_labeled_150t_slangid_txtdict_hf_stopwords.txt  pilkada_dki_labeled_100t.csv  pilkada_dki_labeled_100t_slangid_txtdict_hf_stopwords.csv  provider_labeled_135t.csv  provider_labeled_135t_slangid_txtdict_hf_stopwords.csv
data/corpus_final/aspect_list/: biodiversity_labeled_108t.csv  indo_vaccination_labeled_175t.csv  kampus_merdeka_labeled_150t.csv  pilkada_dki_labeled_100t.csv  provider_labeled_135t.csv
data/corpus_final/for_absa/: biodiversity_labeled_108t_rawtext.csv  indo_vaccination_437t_cleaned.csv  indo_vaccination_437t_min_cleaned.csv  indo_vaccination_437t_normalized.csv  indo_vaccination_labeled_175t_rawtext.csv  kampus_merdeka_297t_cleaned.csv  kampus_merdeka_297t_min_cleaned.csv  kampus_merdeka_297t_normalized.csv  pilkada_dki_264t_cleaned.csv  pilkada_dki_264t_min_cleaned.csv  pilkada_dki_264t_normalized.csv  pilkada_dki_paslon_cleaned.csv  pilkada_dki_paslon_min_cleaned.csv  (+1 more)
data/lexicon/: Indonesian_Slang_Dictionary.txt  combine.py  combined_stop_words.txt  idopinionwords_combined.csv  idopinionwords_negative.txt  idopinionwords_positive.txt  inset_combined.csv  inset_negative.tsv  inset_positive.tsv  slang-indo.csv  stop_words.txt
data/preprocessing/: add_id.py  cleaning.py  csvtotxt.py  extract_ac.py  extract_corpus.py  filter_stopwords.py  helper.py  merge.py  norm.py  preprocess.py  replace_special_phrase.py  w2vlda_preprocess.py
gdm/: absa_community_merge.py  community.py  consensus copy 2.py  consensus.py
main/: main.py  main_gui.py
preprocess/: helper.py  preprocess.py
src/gdm/: community.py  consensus.py
src/main/: main.py  main_gui.py  null_models.py
(+640 files in other folders)
