[project]
name = "echo_absa_gdm"
version = "0.1.0"
description = "CLI for echo_absa_gdm"
authors = [{ name = "Puti Nabilla Aidira", email = "aidiraputiabil@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "slangid",
    "langchain",
    "langchain-community",
    "pydantic",
    "networkx",
    "python-louvain"
]

[project.scripts]
preprocess = "preprocess.preprocess:main"
mistral = "absa.models.mistral:main"
gemini = "absa.models.gemini:main"
gptabsa = "absa.models.gpt:main"
pyabsa = "absa.models.pyabsa:main"
dp = "absa.models.dp:main"
metric_calc = "absa.metrics.metric_calc:main"
community = "gdm.community:main"
absa_community_merge = "gdm.absa_community_merge:main"
consensus = "gdm.consensus:main"
main = "main.main:main"

[tool.setuptools.packages.find]
include = ["preprocess", "absa", "gdm", "main"]
