[project]
name = "echo_absa_gdm"
version = "0.1.0"
description = "CLI for echo_absa_gdm"
authors = [{ name = "Puti Nabilla Aidira", email = "aidiraputiabil@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "slangid",
    "langchain",
    "langchain-community",
    "pydantic",
    "networkx",
    "python-louvain"
]

[project.scripts]
preprocess = "src.preprocess.preprocess:main"
gemini = "src.absa.models.gemini:main"
dp = "src.absa.models.dp:main"
metric_calc = "src.absa.metrics.metric_calc:main"
community = "src.gdm.community:main"
absa_community_merge = "src.gdm.absa_community_merge:main"
consensus = "src.gdm.consensus:main"
main = "src.main.main:main"

[tool.setuptools.packages.find]
include = ["src", "preprocess", "absa", "gdm", "main"]
